--- a/playbooks/core_setup/PyEnv.yml
+++ b/playbooks/core_setup/PyEnv.yml
@@ -1,4 +1,9 @@
+- name: Check if .pyenv directory exists
+  stat:
+      path: "{{ ansible_env.HOME }}/.pyenv"
+  register: pyenv_dir
 - name: Install pyenv requirements
+  when: not pyenv_dir.stat.exists
   become: true
   package:
     name: "{{ item }}"
@@ -24,11 +29,13 @@
   - liblzma-dev
   - python-openssl
 - name: Install pyenv
+  when: not pyenv_dir.stat.exists
   shell: >
       curl https://pyenv.run | bash
   args:
     warn: false
 - name: Add pyenv to .bash_config
+  when: not pyenv_dir.stat.exists
   blockinfile:
     path: "{{ ansible_env.HOME }}/.bash_config"
     block: |
@@ -36,6 +43,7 @@
       eval "$(pyenv init -)"
       eval "$(pyenv virtualenv-init -)"
 - name: Install Python
+  when: not pyenv_dir.stat.exists
   shell: |
       . "{{ ansible_env.HOME }}/.bash_config"
       pyenv install 3.7.4
