--- a/ComputerSetup.yml
+++ b/ComputerSetup.yml
@@ -2,7 +2,6 @@
 - name: Setup Computer
   hosts: "{{ target_ip }}"
   tasks:
-   - include: ./playbooks/CoreSetup.yml
-   # - include: ./playbooks/DockerSetup.yml
-   - include: ./playbooks/Extras.yml
-   # - include: ./playbooks/Dotfiles.yml
+    - include: ./playbooks/CoreSetup.yml
+    - include: ./playbooks/DockerSetup.yml
+    - include: ./playbooks/Extras.yml
