--- a/playbooks/extras/Bat.yml
+++ b/playbooks/extras/Bat.yml
@@ -1,10 +1,5 @@
-- name: Check for existing Bat installation
-  command: dpkg-query -W bat
-  register: bat_not_exists
-  failed_when: bat_not_exists.rc > 1
-  changed_when: bat_not_exists.rc == 1
 - name: Install Bat
   become: true
   apt:
     deb: https://github.com/sharkdp/bat/releases/download/v0.12.1/bat-musl_0.12.1_amd64.deb
-  when: bat_not_exists == True
+    state: present
