--- a/playbooks/core_setup/Dotfiles.yml
+++ b/playbooks/core_setup/Dotfiles.yml
@@ -1,3 +1,7 @@
+- name: Create git config directory
+  ansible.builtin.file:
+    path: "{{ ansible_env.HOME }}/.config/git"
+    state: directory
 - name: Check for existing dotfiles repo
   stat:
     path: "{{ ansible_env.HOME }}/.dotfiles"
