--- a/playbooks/CoreSetup.yml
+++ b/playbooks/CoreSetup.yml
@@ -20,3 +20,4 @@
 - include: ./core_setup/BashGitPrompt.yml
 - include: ./core_setup/Dotfiles.yml
 - include: ./core_setup/PyEnv.yml
+- include: ./core_setup/Poetry.yml
