--- a/playbooks/core_setup/BashGitPrompt.yml
+++ b/playbooks/core_setup/BashGitPrompt.yml
@@ -1,8 +1,8 @@
 - name: Check for existing bash-git-prompt
-  stat:
+  ansible.builtin.stat:
     path: "{{ ansible_env.HOME }}/.bash-git-prompt"
   register: git_prompt
 - name: Install bash-git-prompt
-  shell: |
+  ansible.builtin.shell: |
     git clone https://github.com/magicmonty/bash-git-prompt.git ~/.bash-git-prompt --depth=1
   when: not git_prompt.stat.exists
