--- a/playbooks/CoreSetup.yml
+++ b/playbooks/CoreSetup.yml
@@ -1,23 +1,23 @@
 - name: Install core applications
   become: true
-  package:
-    name: "{{ item }}"
+  ansible.builtin.package:
+    name:
+      - git
+      - htop
+      - silversearcher-ag
+      - tmux
+      - vim
     state: latest
     update_cache: yes
-  with_items:
-  - git
-  - htop
-  - silversearcher-ag
-  - tmux
-  - vim
 - name: Add bash_config to bashrc
-  blockinfile:
+  ansible.builtin.blockinfile:
     path: "{{ ansible_env.HOME }}/.bashrc"
     block: |
       if [ -f ~/.bash_config ]; then
           . ~/.bash_config
       fi
-- include: ./core_setup/BashGitPrompt.yml
-- include: ./core_setup/Dotfiles.yml
-- include: ./core_setup/PyEnv.yml
-- include: ./core_setup/Poetry.yml
+- include_tasks: ./core_setup/BashGitPrompt.yml
+- include_tasks: ./core_setup/NeoVim.yml
+- include_tasks: ./core_setup/Dotfiles.yml
+- include_tasks: ./core_setup/PyEnv.yml
+- include_tasks: ./core_setup/Poetry.yml
