--- a/playbooks/DockerSetup.yml
+++ b/playbooks/DockerSetup.yml
@@ -1,38 +1,37 @@
 - name: Install docker pre-reqs
   become: true
-  package:
-    name: "{{ item }}"
+  ansible.builtin.package:
+    name:
+      - apt-transport-https
+      - ca-certificates
+      - curl
+      - software-properties-common
     state: latest
-  with_items:
-  - apt-transport-https
-  - ca-certificates
-  - curl
-  - software-properties-common
 - name: Add docker key
   become: true
-  apt_key:
+  ansible.builtin.apt_key:
     url: https://download.docker.com/linux/ubuntu/gpg
     state: present
 - name: Add docker apt repository
   become: true
-  apt_repository:
+  ansible.builtin.apt_repository:
     repo: "deb [arch=amd64] https://download.docker.com/linux/ubuntu disco stable"
     state: present
     filename: docker
     update_cache: yes
 - name: Install Docker
   become: true
-  package:
+  ansible.builtin.package:
     name: docker-ce
     state: latest
 - name: Create docker group
   become: true
-  group:
+  ansible.builtin.group:
     name: docker
     state: present
 - name: Add user to docker group
   become: true
-  user:
+  ansible.builtin.user:
     name: "{{ ansible_env.USER }}"
     groups: docker
     append: yes
