--- a/playbooks/core_setup/Dotfiles.yml
+++ b/playbooks/core_setup/Dotfiles.yml
@@ -2,19 +2,23 @@
   ansible.builtin.file:
     path: "{{ ansible_env.HOME }}/.config/git"
     state: directory
+- name: Create nvim config directories
+  ansible.builtin.file:
+    path: "{{ ansible_env.HOME }}/.config/nvim/lua"
+    state: directory
 - name: Check for existing dotfiles repo
-  stat:
+  ansible.builtin.stat:
     path: "{{ ansible_env.HOME }}/.dotfiles"
   register: dotfiles
 - name: Clone dotfiles
-  shell: |
+  ansible.builtin.shell: |
       git clone https://github.com/princeodd47/dotfiles.git {{ ansible_env.HOME }}/.dotfiles
   when: not dotfiles.stat.exists
 - name: Create .config directory for flake8 config file
-  file:
+  ansible.builtin.file:
     path: "{{ ansible_env.HOME }}/.config"
     state: directory
 - name: Install dotfiles
-  shell: |
+  ansible.builtin.shell: |
     "{{ ansible_env.HOME}}/.dotfiles/install"
   when: not dotfiles.stat.exists
