--- a/playbooks/CoreSetup.yml
+++ b/playbooks/CoreSetup.yml
@@ -7,6 +7,7 @@
       - silversearcher-ag
       - tmux
       - vim
+      - unzip
     state: latest
     update_cache: yes
 - name: Add bash_config to bashrc
