--- a/playbooks/core_setup/Poetry.yml
+++ b/playbooks/core_setup/Poetry.yml
@@ -1,3 +1,3 @@
 - name: Install poetry
   ansible.builtin.shell:
-      cmd: curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python -
+      cmd: curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | {{ ansible_env.HOME }}/.pyenv/shims/python -
