--- a/playbooks/core_setup/PyEnv.yml
+++ b/playbooks/core_setup/PyEnv.yml
@@ -19,7 +19,7 @@
       - tk-dev
       - libffi-dev
       - liblzma-dev
-      - python-openssl
+      - python3-openssl
     state: latest
     update_cache: yes
 - name: Check if .pyenv directory exists
